# CircuitGen_Graph

./: .clang-format  .clang-tidy  .codespellrc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  BUILDING.md  BUILDING_8md.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets_8json.html  CMakeUserPresets.json.example  CODESTYLE_8md.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  CodeStyle_8md.html  DefaultAuxiliaryMethodsTests_8cpp.html  DefaultAuxiliaryMethodsTests_8cpp.js  DefaultAuxiliaryMethodsTests_8cpp__incl.map  DefaultAuxiliaryMethodsTests_8cpp__incl.md5  DefaultAuxiliaryMethodsTests_8cpp_a02e705f2c454b02a219b5f78501edc9a_cgraph.map  DefaultAuxiliaryMethodsTests_8cpp_a02e705f2c454b02a219b5f78501edc9a_cgraph.md5  DefaultAuxiliaryMethodsTests_8cpp_a6cb1eabcdd9c6ac469fc83fbb4331341_cgraph.map  DefaultAuxiliaryMethodsTests_8cpp_a6cb1eabcdd9c6ac469fc83fbb4331341_cgraph.md5  DefaultAuxiliaryMethods_8cpp.html  DefaultAuxiliaryMethods_8cpp.js  DefaultAuxiliaryMethods_8cpp__incl.map  DefaultAuxiliaryMethods_8cpp__incl.md5  DefaultAuxiliaryMethods_8hpp.html  DefaultAuxiliaryMethods_8hpp.js  DefaultAuxiliaryMethods_8hpp__dep__incl.map  DefaultAuxiliaryMethods_8hpp__dep__incl.md5  DefaultAuxiliaryMethods_8hpp__incl.map  DefaultAuxiliaryMethods_8hpp__incl.md5  DefaultAuxiliaryMethods_8hpp_source.html  DefaultSettings_8cpp.html  DefaultSettings_8cpp__incl.map  (+3016 more)
.github/workflows/: ci.yml
cmake/: CMakeGraphVizOptions.cmake  CircuitGenGraph-config.cmake.in  Config.cmake.in  checks.cmake  colors.cmake  coverage-report.cmake  coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  mcss-doxygen-patch.cmake  package-config.cmake.in  prelude.cmake  spell-targets.cmake  spell.cmake  utils.cmake  variables.cmake
dockerfile/: Dockerfile.ci  Dockerfile.dev  Dockerfile.release
docs/: AUTHORS.md  BUILDING.md  CODESTYLE.md  Doxyfile.in  FORMAT.md  HACKING.md  MEMORY_MANAGEMENT.md  README.md  Sequential.md  conf.py  conf.py.in  doxygen-cyrillic.sty  latex_header.tex
docs/en/: BUILDING.md  CHANGELOG.md  CI_PIPELINE.md  CI_SCRIPTS.md  CONTRIBUTING.md  CmakeFlags.md  CodeStyle.md  DEPLOY.md  FUNCTIONALITY.md  Format.md  GraphML.md  HACKING.md  MEMORY_MANAGEMENT.md  MergeRequests.md  README.md  SCRIPTS.md  Sequential.md  Subgraphs.md  TestbenchGenerator.md  VerilogImport.md  Versioning.md  docker-prune-keep-bases.md
docs/release-notes/: v1.7.0-tag-message.txt  v1.7.0.md
docs/ru/: BUILDING.md  CHANGELOG.md  CI_PIPELINE.md  CI_SCRIPTS.md  CONTRIBUTING.md  CmakeFlags.md  CodeStyle.md  DEPLOY.md  FUNCTIONALITY.md  Format.md  GraphML.md  HACKING.md  MEMORY_MANAGEMENT.md  MergeRequests.md  README.md  SCRIPTS.md  Sequential.md  Subgraphs.md  TestbenchGenerator.md  VerilogImport.md  Versioning.md  docker-prune-keep-bases.md
examples/: CMakeLists.txt  example_build_and_gate.cpp  example_export_dot.cpp  example_export_graphml_classic.cpp  example_export_graphml_pseudo.cpp  example_sequential_ff.cpp  example_testbench.cpp
include/: GraphMLTemplates.hpp  GraphVertex.hpp  GraphVertexBase.hpp  OrientedGraph.hpp  SequentialVerilogStorage.hpp
include/CircuitGenGraph/: DefaultAuxiliaryMethods.hpp  DefaultSettings.hpp  GraphMLTemplates.hpp  GraphMemory.hpp  GraphReader.hpp  GraphUtils.hpp  GraphVertex.hpp  GraphVertexBase.hpp  GraphVertexBus.hpp  Logging.hpp  OrientedGraph.hpp  SequentialVerilogStorage.hpp  TestbenchGenerator.hpp  enums.hpp
lib/: CMakeLists.txt
lib/easyloggingpp/: easylogging++.cc  easylogging++.h
lib/fmt/: core.h  format-inl.h  format.cc  format.h
scripts/ci/: apk-install-with-retry.sh  coverage.sh  create-gitlab-release.sh  docker-build-ci.sh  docker-build-dev.sh  docker-build-release.sh  docker-context-changed.sh  docker-hub-proxy-image.sh  docker-prune-keep-bases.en.md  docker-prune-keep-bases.md  docker-prune-keep-bases.ps1  docker-registry-login.sh  docker-skip-if-unchanged.sh  docs.sh  examples.sh  generate-gitlab-os-matrix.sh  lint.sh  os-full-check.sh  os-image-build-push.sh  run-all.sh  run-task.sh  sanitize.sh  static-analysis.sh  test_deploy_mock.sh  tests.sh
scripts/config/: supported-os.sh
scripts/dev/: build-debug.sh  build-docs.sh  build-examples.sh  coverage.sh  pre-push-docker.sh  pre-push.sh
scripts/docker/: build-ci-image.sh  build-dev-only-image.sh  build-images.sh  build-release-only-image.sh  docker-paths.sh  install-release-toolchain.sh
scripts/docs/: DEPLOY.md  build-doxygen-lang-variants.sh  (+7 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  (+158 more)
src/: CMakeLists.txt  DefaultAuxiliaryMethods.cpp  DefaultSettings.cpp  GraphMLTemplates.hpp  GraphReader.cpp  GraphUtils.cpp  GraphVertexBase.cpp  GraphVertexBus.cpp  GraphVertexConstant.cpp  GraphVertexDataBus.cpp  GraphVertexGates.cpp  GraphVertexInput.cpp  GraphVertexOutput.cpp  GraphVertexSequential.cpp  GraphVertexSubGraph.cpp  OrientedGraph.cpp  TestbenchGenerator.cpp
submodules/: testSubGraph.v
test/: CMakeLists.txt  easylogging++Init.hpp
test/src/: DefaultAuxiliaryMethodsTests.cpp  GraphReaderTests.cpp  GraphUtilsTests.cpp  GraphVertexBaseTests.cpp  GraphVertexBusTests.cpp  GraphVertexConstantTests.cpp  GraphVertexDataBusTests.cpp  GraphVertexGatesTests.cpp  GraphVertexInputTests.cpp  GraphVertexOutputTests.cpp  GraphVertexSequentialTests.cpp  GraphVertexSubGraphTests.cpp  MemoryManagement.cpp  MemoryManagementTests.cpp  OrientedGraphTests.cpp  TestDataBusData.hpp  TestSeqData.hpp  TestbenchGeneratorTests.cpp  temp.v
test/testModulesForReading/: allGatesTest.v  constTest.v  outputAsGate.v  simpleReading.v  simpleStructure.v  testest.v
(+19 files in other folders)
